/iTrade/ChangeLog
===============================================================================

On the road for v0.4.6 (Nausicaa2)

===============================================================================

2007-02-20  Gilles Dumortier <dgil at ieee.org>
	* Move symbols lists to specific /symbols folder (on going work to have
	  symbols lists storage per market)
	* Euronext plugin : update the URL to download symbols lists
	  Also, modify internal code of the plugin to be more dynamic in front
          of the format for the returned data

2007-02-18  Gilles Dumortier <dgil at ieee.org>
	* New tarball
	* Quotes selection : sort by name (SF bug 1562293)
	* Portfolios selection : sort by name (SF bug 1562293)
	* Operation Edit: sort operation type + better display
	* Operation View: filter by year not displayed (SF bug 1626233)
	* Portfolio : edit the default VAT (SF bug 1474568)

2007-02-17  Gilles Dumortier <dgil at ieee.org>
	* Empty id/passwd : do not try to log to service
	* Switch to Notebook Experimental Feature (SF bug 1651970)
	* r571(-x): Change Portfolio : don't stay on last view (SF bug 1657836)
	* r560(-x): Change language : update twice (SF bug 1653525)
	* Operation View: Order by date and not by day (SF bug 1611501)
	* Rewrote itrade_wxoperations forms using iTradeSizedDialog
	* Rewrote itrade_wxportfolio forms using iTradeSizedDialog
	* Switch to wxPython 2.8.x - (2.6.x is not supported anymore because of
	  specific new features we will use - like SizedControls)

2007-02-12  Gilles Dumortier <dgil at ieee.org>
	* Fortuneo plugin : handle redirection (302) - but connector still not
          working because of new scheme under investigation

2007-02-11  Gilles Dumortier <dgil at ieee.org>
	* Switch to matplotlib 0.90.x

2007-02-10  Gilles Dumortier <dgil at ieee.org>
	* Split forum : French vs English

2007-02-09  Gilles Dumortier <dgil at ieee.org>
	* Stops View : some words are not translated (SF bug 1653527)