@@ -1,0 +1,2 @@
+FR0000073272.EURONEXT.PAR;import;abcbourse
+FR0000124141.EURONEXT.PAR;import;euronext
